tests/functor-07/out.txt
error: mismatched types: expected t, found t
   ┌─ err.sml:11:9
   │
11 │ val _ = One.f Two.C
   │         ^^^^^^^^^^^

typechecking failed
